--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -85,26 +85,18 @@
             <ion-col>
               <ion-item>
                 <ion-label>
-                  <h2>Orders</h2>
-                  <p>0</p>
+                  <h2>Online Amount</h2>
+                  <p>{{ data?.online_amount }}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col>
-              <ion-item>
+              <ion-item>                
                 <ion-label>
-                  <h2>Online Amount</h2>
-                  <p>{{ data?.online_amount }}</p>
-                </ion-label>
-              </ion-item>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label>
-                  <h2>Orders</h2>
-                  <p>0</p>
+                  <h2>Total Orders</h2>
+                  <p>{{ data?.total_orders}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
