--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -8,9 +8,9 @@
 <ion-content class="ion-padding" force-overscroll="true">
   <ion-searchbar (ionChange)="search($event)"></ion-searchbar>
   <ion-list>
-    <!-- <ion-item>
-      All<ion-toggle slot="end" (click)="selectAll($event)" value="%" [checked]="checkAll"></ion-toggle>
-    </ion-item> -->
+    <ion-item>
+      All<ion-toggle slot="end" (ionChange)="selectAll($event)" value="%" [checked]="checkAll"></ion-toggle>
+    </ion-item>
     <ion-item *ngFor="let r of searchResults">
       {{r.title}}<ion-toggle slot="end" [value]="r.id" (ionChange)="select($event,r.id)" [checked]="r.rstatus==='1'?true:false"></ion-toggle>
     </ion-item>
